poke/testsuite/poke.pkl/strings-index-diag-3.pk
/* { dg-do compile } */

defvar a = "foo"[3]; /* { dg-error "" } */
